# crypto_playground

./: .gitignore  Cargo.toml  README.md
docs/theory/: gf256.md  utf8.md  xor.md
docs/theory/aes/: aes.md  converters.md  gf256.md  key_expansion.md  sbox.md
src/: lib.rs  utils.rs
src/encode/: mod.rs  sbox.rs  utf8.rs  xor.rs
src/encode/aes256/: aes.rs  core.rs  gf256.rs  key_expansion.rs  mod.rs  sbox.rs
src/utils/: converters.rs  mod.rs
tests/: base.rs  converters.rs  gf256.rs  mod.rs  sbox.rs  utf8.rs  utf8_encoding.rs  xor.rs
tests/aes256/: aes.rs  core.rs  gf256.rs  mod.rs  sbox.rs
